@@ -163,6 +163,12 @@ module NewRelic
     
     alias get_stats_no_scope get_stats 
     
+    # Get the logger for the agent.  Available after the agent has initialized.
+    # This sends output to the agent log file.
+    def logger
+      NewRelic::Agent.logger
+    end
+    
     # Call this to manually start the Agent in situations where the Agent does
     # not auto-start.
     # 
