@@ -1,8 +1,8 @@
 if defined?(PhusionPassenger)
-  NewRelic::Control.instance.log.debug "Installing Passenger event hooks."
+  NewRelic::Agent.logger.debug "Installing Passenger event hooks."
 
   PhusionPassenger.on_event(:stopping_worker_process) do 
-    NewRelic::Control.instance.log.debug "Passenger stopping this process, shutdown the agent."
+    NewRelic::Agent.logger.debug "Passenger stopping this process, shutdown the agent."
     NewRelic::Agent.instance.shutdown
   end
 
